fixes issues with advertisement
