# src/controllers/advertisementController.js
@@ -8,16 +8,23 @@ const advertiseAccomodations = async (req, res) => {
   const accomodationId = req.params.id;
   // #swagger.tags = ['advertise']
   const { days, amount } = req.body;
+  //   console.log(req.body);
   try {
     // check if accommodation exist or not
-    const accomodations = await Accomodation.find({
-      isActive: true,
-      currentUser,
+    const accomodations = await Accomodation.findOne({
       _id: accomodationId,
+      createdBy: currentUser,
     });
 
+    // console.log(accomodations);
+    // console.log(accomodationId);
     if (!accomodations) {
-      return ErrorHandler("Accommodation does not exist", 400, req, res);
+      return ErrorHandler(
+        "Accommodation does not exist or you are not the creator",
+        400,
+        req,
+        res
+      );
     }
 
     // check if advertisement already exist or not
@@ -26,7 +33,7 @@ const advertiseAccomodations = async (req, res) => {
       isActive: true,
       host: currentUser,
     });
-    if (!isAdvertisement) {
+    if (isAdvertisement) {
       return ErrorHandler(
         "Your Accommodation already advertised",
         400,
@@ -37,19 +44,21 @@ const advertiseAccomodations = async (req, res) => {
     // adding number of days to today's date
     let date = new Date();
     let adExpiryDate = date.setDate(date.getDate() + days);
+    // console.log("adExpiryDate: ", new Date(adExpiryDate));
     const advertise = await Advertisement.create({
       host: currentUser,
       accommodation: accomodationId,
       days: days,
-      //   expiryDate: expiryDate,
+      expiryDate: new Date(adExpiryDate),
       amount: amount,
     });
-    await Advertisement.findByIdAndUpdate(
-      { accommodation: accomodationId },
-      {
-        expiryDate: adExpiryDate,
-      }
-    );
+    // let ad = await Advertisement.findOneAndUpdate(
+    //   { accommodation: accomodationId },
+    //   {
+    //     expiryDate: new Date(adExpiryDate),
+    //   }
+    // );
+    // console.log("ad", ad);
 
     return SuccessHandler(
       {
@@ -65,6 +74,26 @@ const advertiseAccomodations = async (req, res) => {
   }
 };
 
+const getAdvertisedAccomodations = async (req, res) => {
+  //   const currentUser = req.user._id;
+  // #swagger.tags = ['advertise']
+  try {
+    const advertisements = await Advertisement.find().sort({ createdAt: -1 });
+    return SuccessHandler(
+      {
+        success: true,
+        message: "Advertisements fetched successfully",
+        advertisements,
+      },
+      200,
+      res
+    );
+  } catch (error) {
+    return ErrorHandler(error.message, 500, req, res);
+  }
+};
+
 module.exports = {
   advertiseAccomodations,
+  getAdvertisedAccomodations,
 };
